--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  /* margin: 8px; */
+  padding: 8px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,11 +19,16 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
+  display: flex;
 }
 
 a {
   font-size: 22px;
   background: white;
+  margin: 8px;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
